Connect google fonts and add basic css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    
+    <div>select game window</div>
+    <div>game area</div>
+    <div>score area</div>
+    <div>result window</div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
