--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div>select game window</div>
+
+    <!-- main page game window-->
+    <div class="select-game">
+        <h1 class="selection-text">Select Game</h1>
+        <div class="game-selection">
+            <button>Single-Player</button>
+            <button>Multiplayer</button>
+        </div>
+        <button>Start Game</button>
+    </div>
+
     <div>game area</div>
     <div>score area</div>
     <div>result window</div>
